<resources>
    <string name="app_name">Hello World</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="yourEmail_domain_com">youremail@domain.com</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="logo">logo</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign up</string>
    <string name="here">here</string>
    <string name="by_creating_an_account_you_agree_to_our">By creating an account, you agree to our</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="fb_logo">FB Logo</string>
    <string name="gg_logo">Google logo</string>
    <string name="sample">Sample</string>
    <string name="item">Item</string>
    <string name="wishlist">Wishlist</string>
    <string name="learn_python_like_a_professional_start_from_the_basics_and_go_all_the_way_to_creating_your">Learn Python like a Professional! Start from the basics and go all the way to creating your...</string>
    <string name="see_full_review"><![CDATA[See full review >]]></string>
    <string name="rating">rating</string>
    <string name="tomato">Tomato</string>
    <string name="fruit">Fruit</string>
    <string name="tomato_details">The tomato is the edible, often red berry of the plant Solanum lycopersicum, commonly known as a tomato plant. The species originated in western South America and Central America. The Nahuatl word tomatl gave rise to the Spanish word tomate, from which the English word tomato derived.</string>
</resources>